--- a/style.css
+++ b/style.css
@@ -3,3 +3,31 @@ body {
   height: 100%;
   margin: 0;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* <link  rel="stylesheet" href="./style.css"> */ 
+ 
+  
+
